tests/error/ptr_assign_global.gw
#! [contains] can't assign non member function to member function pointer
class C {
  typedef void Test();
  var Test test;
}

fun void test(){}
var C c;
test @=> c.test;
